<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Counters">

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/optionsButtonsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="right" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_counter_button"
            android:id="@+id/addButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_button"
            android:id="@+id/resetButton"
            android:layout_gravity="bottom" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_button"
            android:id="@+id/exportButton"
            android:layout_gravity="bottom" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:id="@+id/saveButton" />
    </LinearLayout>

    <GridView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/counterGridView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:numColumns="auto_fit"
        android:layout_above="@id/optionsButtonsLayout"
        android:horizontalSpacing="4dp"
        android:verticalSpacing="4dp" />
</RelativeLayout>
